--- a/app/views/toilets/show.html.erb
+++ b/app/views/toilets/show.html.erb
@@ -1,4 +1,4 @@
-<div class='row'>
+<div class='row top_title'>
 	<div class='large-2 columns'>
 		<% if @toilet.favorites.any?{|fav| fav.favoriter_id == session[:user_id]} %>
 			<%= image_tag "fav-star.jpg" %>
@@ -11,14 +11,41 @@
 	</div>
 </div>
 <div class='row'>
-	<div class='large-8 columns'>
+	<div class='large-5 columns'>
 		<p>Location: <%= @toilet.location %></p>
 		<p>Neighborhood: <%= @toilet.neighborhood %></p>
 		<p>Borough: <%= @toilet.sublocality %></p>
 		<p>Average Review: <%= @average_review %></p>
 		<p><a href='/toilets/<%= @toilet.id %>/review'>Click</a> to review your Toilet experience</p>
 	</div>
-	<div class='large-3 columns' id='toilet_image'>
+		<div id="google-map" class="small-block-grid-1 large-block-grid-2"></div>
+<script>
+  function initMap() {
+    var mapDiv = document.getElementById('google-map');
+    var map = new google.maps.Map(mapDiv, {
+          center: {lat: @toilet.latitude, lng: @toilet.longitude},
+          zoom: 12
+        });
+    $.getJSON("/toilet_data").done(function(toilets) {
+      for(var i=0; i < 50; i++){
+          var marker = new google.maps.Marker({
+          position: {lat: (toilets[i].latitude - 0), lng: (toilets[i].longitude - 0)},
+          map: map,
+          title: toilets[i].name
+    });
+      }
+
+    })
+    var marker = new google.maps.Marker({
+      position: {lat: 40.7831, lng: -73.9712},
+      map: map,
+      title: "TOILET"
+    });
+  }
+  </script>
+  <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"async defer></script>
+	</div>
+	<div class='large-2 columns' id='toilet_image'>
 		<%= image_tag "fancy_toilet.jpg" %>
 	</div>
 </div>
