--- a/toilet_pal/app/assets/stylesheets/toilets.css
+++ b/toilet_pal/app/assets/stylesheets/toilets.css
@@ -23,7 +23,7 @@
 
 
 #toilet_image {
-	float: right;
+
   -webkit-box-shadow: 8px 8px 6px -6px black;
      -moz-box-shadow: 8px 8px 6px -6px black;
           box-shadow: 8px 8px 6px -6px black;
@@ -72,4 +72,7 @@
 
 }
 
+.top_title {
+  padding-top: 1rem;
+}
 
