--- a/app/assets/stylesheets/toilets.css
+++ b/app/assets/stylesheets/toilets.css
@@ -14,7 +14,7 @@
   display:inline-block;
 }
 #toilet_image {
-	float: right;
+
   -webkit-box-shadow: 8px 8px 6px -6px black;
      -moz-box-shadow: 8px 8px 6px -6px black;
           box-shadow: 8px 8px 6px -6px black;
@@ -63,4 +63,7 @@
 
 }
 
+.top_title {
+  padding-top: 1rem;
+}
 
