--- a/toilet_pal/app/views/users/edit.html.erb
+++ b/toilet_pal/app/views/users/edit.html.erb
@@ -2,32 +2,32 @@
 <h1>Update your profile</h1>
 
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="6-medium rows">
     <%= form_for(@user) do |f| %>
 
       <%= f.label :username %>
-      <%= f.text_field :username, class: 'form-control' %>
+      <%= f.text_field :username %>
 
       <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
+      <%= f.email_field :email %>
 
       <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
+      <%= f.password_field :password %>
 
       <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
+      <%= f.password_field :password_confirmation %>
 
-      <%= f.label :first_name %><br>
-      <%= f.text_field :first_name, class: 'form-control' %><br>
+      <%= f.label :first_name %>
+      <%= f.text_field :first_name %>
 
-      <%= f.label :last_name %><br>
-      <%= f.text_field :last_name, class: 'form-control' %>
+      <%= f.label :last_name %>
+      <%= f.text_field :last_name %>
 
-      <%= f.label :zip_code %><br>
-      <%= f.text_field :zip_code, class: 'form-control' %>
+      <%= f.label :zip_code %>
+      <%= f.text_field :zip_code %>
 
-      <%= f.label :gender %><br>
-      <%= f.text_field :gender, class: 'form-control' %>
+      <%= f.label :gender %>
+      <%= f.text_field :gender %>
 
       <%= f.submit "Save changes", class: "button primary" %>
     <% end %>
