--- a/toilet_pal/app/views/toilets/index.html.erb
+++ b/toilet_pal/app/views/toilets/index.html.erb
@@ -1,23 +1,14 @@
-
-<% if !@user_input%>
-
-  <script>
+<script>
     var currentLongitude = -73.9712; //default at center manhattan
     var currentLatitude = 40.7831; //default at center manhattan
     navigator.geolocation.getCurrentPosition(function(p){
       currentLatitude = p.coords.latitude;
       currentLongitude = p.coords.longitude;
+      // debugger
     });
+</script>
 
-  </script>
-
-<!-- give search box for user to choose where they want to go -->
-
-<% else %>
-
-<h1>Toilets near <%=@user_input%>: </h1>
-
-<% end %>
+<h1>Toilets near you: </h1>
 
 <div id="toilets-index-table" class="row">
 
@@ -28,23 +19,6 @@
 
   <div id="google-map" class="small-block-grid-1 large-block-grid-2"></div>
 
-<% if @user_input %>
-
-<!-- check to make sure you can call ruby variables inside the javascript call below -->
-
-    <script>
-  function initMap() {
-    var mapDiv = document.getElementById('google-map');
-    var map = new google.maps.Map(mapDiv, {
-          center: {lat: <%=@user_input_latitude%>, lng: <%=@user_input_longitude%>},
-          zoom: 12
-        });
-    })
-  }
-  </script>
-  <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"async defer></script>
-
-<% else %>
 
   <script>
   function initMap() {
@@ -72,6 +46,5 @@
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"async defer></script>
 
-<% end %>
-
 </div>
+
