--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -13,8 +13,7 @@
 <div id="toilets-index-table" class="row">
 
   <div id="toilets-index-list" class="small-block-grid-1 large-block-grid-2">
-    <!-- loop to show toilets in area -->
-    <p>Placeholder for list of toilets</p>
+    <%= render @toilets %>
   </div>
 
   <div id="google-map" class="small-block-grid-1 large-block-grid-2"></div>
@@ -25,7 +24,7 @@
     var mapDiv = document.getElementById('google-map');
     var map = new google.maps.Map(mapDiv, {
           center: {lat: 40.7831, lng: -73.9712},
-          zoom: 12
+          zoom: 11
         });
     $.getJSON("/toilet_data").done(function(toilets) {
       for(var i=0; i < 50; i++){
