--- a/app/assets/stylesheets/toilets.css
+++ b/app/assets/stylesheets/toilets.css
@@ -3,6 +3,14 @@
   height: 50%;
 }
 
+#google-map-show {
+  width: 500px;
+  height: 400px;
+  background-color: yellow;
+  float: right;
+}
+
+
 #toilets-index-table {
   width: 100%;
   height: 100%;
