--- a/app/views/toilets/show.html.erb
+++ b/app/views/toilets/show.html.erb
@@ -18,35 +18,22 @@
 		<p>Average Review: <%= @average_review %></p>
 		<p><a href='/toilets/<%= @toilet.id %>/review'>Click</a> to review your Toilet experience</p>
 	</div>
-		<div id="google-map" class="small-block-grid-1 large-block-grid-2"></div>
-<script>
-  function initMap() {
-    var mapDiv = document.getElementById('google-map');
+	<div id="google-map-show" ></div>
+	 <script>
+  	function initMap() {
+    var mapDiv = document.getElementById('google-map-show');
     var map = new google.maps.Map(mapDiv, {
-          center: {lat: @toilet.latitude, lng: @toilet.longitude},
-          zoom: 12
+          center: {lat: <%=@toilet.latitude%>, lng: <%=@toilet.longitude%>},
+          zoom: 16
         });
-    $.getJSON("/toilet_data").done(function(toilets) {
-      for(var i=0; i < 50; i++){
-          var marker = new google.maps.Marker({
-          position: {lat: (toilets[i].latitude - 0), lng: (toilets[i].longitude - 0)},
-          map: map,
-          title: toilets[i].name
-    });
-      }
-
-    })
     var marker = new google.maps.Marker({
-      position: {lat: 40.7831, lng: -73.9712},
+      position: {lat: <%=@toilet.latitude%>, lng: <%=@toilet.longitude%>},
       map: map,
       title: "TOILET"
     });
-  }
+    }
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"async defer></script>
-	</div>
-	<div class='large-2 columns' id='toilet_image'>
-		<%= image_tag "fancy_toilet.jpg" %>
 	</div>
 </div>
 
