--- a/toilet_pal/app/views/toilets/_toilet.html.erb
+++ b/toilet_pal/app/views/toilets/_toilet.html.erb
@@ -1,4 +1,4 @@
-<div>
+<li class="toilet-block">
   <p><%= link_to "#{toilet.name}", toilet_path(toilet) %></p>
   <p><%=toilet.location%></p>
-</div>
+</li>
