--- a/toilet_pal/app/views/toilets/show.html.erb
+++ b/toilet_pal/app/views/toilets/show.html.erb
@@ -15,6 +15,7 @@
 		<p>Location: <%= @toilet.location %></p>
 		<p>Neighborhood: <%= @toilet.neighborhood %></p>
 		<p>Borough: <%= @toilet.sublocality %></p>
+		<p>Tags: <%= tags(@toilet) %>
 		<p>Average Review: <%= @average_review %></p>
 		<p><a href='/toilets/<%= @toilet.id %>/review'>Click</a> to review your Toilet experience</p>
 	</div>
