--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,35 +1,44 @@
 <% provide(:title, "Edit user") %>
-<h1>Update your profile</h1>
+<h1>Update Your Profile</h1>
 
-<div class="row">
-  <div class="6-medium rows">
+<div class=" container row">
     <%= form_for(@user) do |f| %>
 
-      <%= f.label :username %>
-      <%= f.text_field :username %>
+      <div class="gravatar_edit">
+        <%= gravatar_for @user %>
+        <a href="http://gravatar.com/emails" target="_blank">change</a>
+      </div>
 
-      <%= f.label :email %>
-      <%= f.email_field :email %>
+      <div class='small-6 columns'>
+        <%= f.label :username %>
+        <%= f.text_field :username %>
 
-      <%= f.label :password %>
-      <%= f.password_field :password %>
+        <%= f.label :email %>
+        <%= f.email_field :email %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation %>
+        <%= f.label :password %>
+        <%= f.password_field :password %>
 
-      <%= f.label :first_name %>
-      <%= f.text_field :first_name %>
+        <%= f.label :password_confirmation, "Confirmation" %>
+        <%= f.password_field :password_confirmation %>
+      </div>
 
-      <%= f.label :last_name %>
-      <%= f.text_field :last_name %>
+      <div class='small-6 columns'>
+        <%= f.label :first_name %>
+        <%= f.text_field :first_name %>
 
-      <%= f.label :zip_code %>
-      <%= f.text_field :zip_code %>
+        <%= f.label :last_name %>
+        <%= f.text_field :last_name %>
 
-      <%= f.label :gender %>
-      <%= f.text_field :gender %>
+        <%= f.label :zip_code %>
+        <%= f.text_field :zip_code %>
 
-      <%= f.submit "Save changes", class: "button primary" %>
+        <%= f.label :gender %>
+        <%= f.text_field :gender %>
+    </div>
+      <div>
+        <%= f.submit "Save changes", class: "button primary" %>
+      </div>
     <% end %>
   </div>
 </div>
