--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,35 +2,36 @@
 <h1>Sign up</h1>
 
 <div class="row">
-  <div class="6-medium-columns">
+  <div class="small-6 columns">
     <%= form_for :user, url: users_path do |f| %>
+      <%= render 'shared/_error_messages' %>
 
-      <%= f.label :username %><br>
+      <%= f.label :username %>
       <%= f.text_field :username %>
 
-      <%= f.label :password %><br>
+      <%= f.label :password %>
       <%= f.password_field :password %>
 
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation %>
 
-      <%= f.label :email %><br>
+      <%= f.label :email %>
       <%= f.email_field :email %>
-
-
-      <%= f.label :first_name %><br>
+      <%= f.submit "Create my account", class: "primary button" %>
+    </div>
+    <div class='small-6 columns'>
+      <%= f.label :first_name %>
       <%= f.text_field :first_name %>
 
-      <%= f.label :last_name %><br>
+      <%= f.label :last_name %>
       <%= f.text_field :last_name %>
 
-      <%= f.label :zip_code %><br>
+      <%= f.label :zip_code %>
       <%= f.text_field :zip_code %>
 
-      <%= f.label :gender %><br>
+      <%= f.label :gender %>
       <%= f.text_field :gender %>
 
-      <%= f.submit "Create my account", class: "primary button" %>
     <% end %>
   </div>
 </div>
