--- a/toilet_pal/app/views/layouts/application.html.erb
+++ b/toilet_pal/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
     </ul>
   </div>
 </div>
-<div>
+<div class='container'>
   <% flash.each do |message_type, message| %>
     <div class="alert alert-<%= message_type %>"><%= message %></div>
     <% end %>
