--- a/toilet_pal/app/views/users/index.html.erb
+++ b/toilet_pal/app/views/users/index.html.erb
@@ -1,10 +1,13 @@
 <% provide(:title, 'All users') %>
-<h1>All users</h1>
+<h1>All Users</h1>
+<div class="digg_pagination">
+  <%= will_paginate @users, :container => false %>
+</div>
 
 <ul class="users">
   <% @users.each do |user| %>
     <li>
-      Avatar
+      <%= gravatar_for user %>
       <%= link_to user.username, user %>
       <% if logged_in? && current_user.admin? %>
     | <%= link_to "delete", user, method: :delete,
