--- a/toilet_pal/app/views/users/show.html.erb
+++ b/toilet_pal/app/views/users/show.html.erb
@@ -1,10 +1,10 @@
-<div class='row'>
+<div>
   <div class='user-about'>
-    <p>
-      <strong>User:</strong>
+    <h4>
       <%= gravatar_for @user %>
+      <strong>User:</strong>
       <%= @user.username %>
-    </p>
+    </h4>
 
     <p>
       <strong>Email:</strong>
@@ -27,24 +27,23 @@
     </p>
   </div>
 </div><br>
-<div class= 'callout clearfix'>
-  <div class='float-left reviews-user'>
+<div>
+  <div class='side-nav favorites-user'>
+    <strong><%= @user.username.capitalize %>'s Favorites:</strong>
+    <ul>
+      <% @user.favorites.each do |favorite| %>
+        <li class='active'><%= link_to "#{favorite.toilet.name}", toilet_path(favorite.toilet)  %></li>
+      <% end %>
+    </ul>
+  </div>
+  <div class='reviews-user'>
     <p>
-      <strong><%= @user.username.capitalize %>'s Reviews:</strong>
+      <h4><%= @user.username.capitalize %>'s Reviews:</h4>
       <ul>
         <% @user.reviews.each do |review| %>
+          <li class='ind-review'>Review: <%= link_to "#{review.toilet.name}", toilet_path(review.toilet) %></li>
           <li>Rating: <%= review.rating %></li>
-          <li>Review: <%= link_to "#{review.toilet.name}", toilet_path(review.toilet) %></li>
-        <% end %>
-      </ul>
-    </p>
-  </div>
-    <div class='float-right favorites-user'>
-    <p>
-      <strong><%= @user.username.capitalize %>'s Favorites:</strong>
-      <ul>
-        <% @user.favorites.each do |favorite| %>
-          <li>Favorite Toilets: <%= link_to "#{favorite.toilet.name}", toilet_path(favorite.toilet)  %></li>
+          <li><%= review.review_text %></li>
         <% end %>
       </ul>
     </p>
