--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -15,7 +15,6 @@
 
   <div id="google-map" ></div>
 
-
   <script>
   function initMap() {
     var mapDiv = document.getElementById('google-map');
@@ -23,21 +22,18 @@
           center: {lat: 40.7831, lng: -73.9712},
           zoom: 11
         });
+    var icon = "<%= asset_path 'poo.png' %>"
     $.getJSON("/toilet_data").done(function(toilets) {
       for(var i=0; i < 850; i++){
           var marker = new google.maps.Marker({
           position: {lat: (toilets[i].latitude - 0), lng: (toilets[i].longitude - 0)},
           map: map,
+          icon: icon,
           title: toilets[i].name
     });
       }
 
     })
-    var marker = new google.maps.Marker({
-      position: {lat: 40.7831, lng: -73.9712},
-      map: map,
-      title: "TOILET"
-    });
   }
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"async defer></script>
