--- a/toilet_pal/app/views/toilets/index.html.erb
+++ b/toilet_pal/app/views/toilets/index.html.erb
@@ -37,6 +37,18 @@
   }
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"async defer></script>
+
+<div class="row">
+  <div class="small-12 columns">
+    <%= form_for :user, url: users_path do |f| %>
+      <%= f.text_field :user_input, placeholder: "Where do you want to pee?" %>
+
+      <%= f.submit "Search", class: "primary button" %>
+    <% end %>
+  </div>
+</div>
+
+
   <div id='filters'>
 
   <div id="toilets-index-list" >
